# web_scraping

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  from_onlytlinh_source.py  ket_hon_sai_lam.py  pyproject.toml  requirements.txt  webscraping.py
Chanh chua/: Chanh chua. Chương 1.docx  Chanh chua. Chương 10.docx  Chanh chua. Chương 11.docx  Chanh chua. Chương 12.docx  Chanh chua. Chương 13.docx  Chanh chua. Chương 14.docx  Chanh chua. Chương 15.docx  Chanh chua. Chương 16.docx  Chanh chua. Chương 17.docx  Chanh chua. Chương 18.docx  Chanh chua. Chương 19.docx  Chanh chua. Chương 2.docx  Chanh chua. Chương 20.docx  Chanh chua. Chương 26.docx  Chanh chua. Chương 27.docx  Chanh chua. Chương 28.docx  Chanh chua. Chương 29.docx  Chanh chua. Chương 3.docx  Chanh chua. Chương 30.docx  Chanh chua. Chương 31.docx  Chanh chua. Chương 32.docx  Chanh chua. Chương 33.docx  Chanh chua. Chương 34.docx  Chanh chua. Chương 35.docx  Chanh chua. Chương 36.docx  Chanh chua. Chương 4.docx  Chanh chua. Chương 5.docx  Chanh chua. Chương 6.docx  Chanh chua. Chương 7.docx  Chanh chua. Chương 8.docx  Chanh chua. Chương 9.docx  Riêng Tư: Chanh Chua. Chương 25.docx  Riêng Tư: Chanh Chua. Chương 42.docx  Riêng Tư: Chanh chua. Chương 21.docx  Riêng Tư: Chanh chua. Chương 22.docx  Riêng Tư: Chanh chua. Chương 23.docx  Riêng Tư: Chanh chua. Chương 24.docx  Riêng Tư: Chanh chua. Chương 37.docx  Riêng Tư: Chanh chua. Chương 38.docx  Riêng Tư: Chanh chua. Chương 39.docx  (+45 more)
docker_test/: mongtruyen_crawler.py  trichtinhlau_crawler.py  truyenfullvision_crawler.py  vuaduongotp_crawler.py  (+2 more)
(+242 files in other folders)
