[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]
