[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.7.5",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "seleniumbase>=4.46.5",
    "webdriver-manager>=4.0.2",
]
